--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:lineHeight="20dp"
-        android:text="Change Your Password"
+        android:text="@string/change_your_password"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="20dp"
@@ -39,7 +39,7 @@
         android:visibility="gone"
         app:errorEnabled="true"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="@string/password"
         app:passwordToggleEnabled="true">
 
         <EditText
@@ -60,7 +60,7 @@
         android:layout_width="345dp"
         app:errorEnabled="true"
         android:layout_height="wrap_content"
-        android:hint="New Password"
+        android:hint="@string/new_password"
         app:passwordToggleEnabled="true">
 
         <EditText
@@ -80,7 +80,7 @@
         android:layout_width="345dp"
         app:errorEnabled="true"
         android:layout_height="wrap_content"
-        android:hint="Confirm New Password"
+        android:hint="@string/confirm_new_password"
         app:passwordToggleEnabled="true">
 
         <EditText
@@ -103,7 +103,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/custom_button_oval"
         android:lineHeight="20dp"
-        android:text="Confirm"
+        android:text="@string/confirm"
         android:textAllCaps="false"
         android:textSize="18dp"
         android:textStyle="bold" />
