--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -30,7 +30,7 @@
         android:textStyle="bold"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:text="Forgot Password"
+        android:text="@string/forgot_password"
         android:textSize="20dp"
         android:textAlignment="center"
         />
@@ -40,7 +40,7 @@
         android:lineHeight="20dp"
         android:layout_width="289dp"
         android:layout_height="60dp"
-        android:text="Don’t worry! Enter your registered phone number below to receive password instructions"
+        android:text="@string/don_t_worry_enter_your_registered_phone_number_below_to_receive_password_instructions"
         android:textSize="15dp"
         android:textAlignment="center"
         />
@@ -53,7 +53,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tipPhoneNumberForgotPassword"
         android:layout_width="345dp"
-        android:hint="Phone Number"
+        android:hint="@string/phone_number"
         android:layout_height="wrap_content">
         <EditText
             android:lines="1"
@@ -78,7 +78,7 @@
             android:layout_width="170dp"
             android:layout_height="23dp"
             android:lineHeight="22.5dp"
-            android:text="Remember Password ?"
+            android:text="@string/remember_password"
             android:textAlignment="center"
             android:textSize="15dp" />
 
@@ -88,7 +88,7 @@
             android:layout_height="23dp"
             android:layout_toRightOf="@id/tvRP"
             android:lineHeight="22.5dp"
-            android:text="Log In"
+            android:text="@string/log_in"
             android:textAlignment="center"
             android:textColor="@color/colorPrimary"
             android:textSize="15dp"
@@ -99,7 +99,7 @@
         android:lineHeight="20dp"
         android:textSize="18dp"
         android:textAllCaps="false"
-        android:text="Cofirm"
+        android:text="@string/confirm"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:layout_width="295dp"
@@ -110,15 +110,15 @@
         android:layout_marginTop="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/tvDHAC"
-            android:lineHeight="22.5dp"
-            android:textSize="15dp"
-            android:textAlignment="center"
             android:layout_width="181dp"
             android:layout_height="23dp"
-            android:text="Don’t have an account ?"
-            />
+            android:lineHeight="22.5dp"
+            android:text="@string/don_t_have_an_account"
+            android:textAlignment="center"
+            android:textSize="15dp" />
 
         <TextView
             android:id="@+id/tvSignUpForgotPassword"
@@ -126,7 +126,7 @@
             android:layout_height="23dp"
             android:layout_toRightOf="@id/tvDHAC"
             android:lineHeight="22.5dp"
-            android:text="Sign Up"
+            android:text="@string/sign_up"
             android:textAlignment="center"
             android:textColor="@color/colorPrimary"
             android:textSize="15dp"
