--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:lineHeight="24dp"
-        android:text="Order Detail"
+        android:text="@string/order_detail"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="16dp"
@@ -63,7 +63,7 @@
                     android:background="@drawable/custom_button_oval"
                     android:gravity="center"
                     android:lineHeight="20dp"
-                    android:text="Order Info"
+                    android:text="@string/order_info"
                     android:textColor="@color/white"
                     android:textSize="14dp"
                     android:textStyle="bold" />
@@ -88,7 +88,7 @@
                             android:drawableLeft="@drawable/ic_hourglass_empty_fill0_wght400_grad0_opsz48"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text=" Status"
+                            android:text="@string/status"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -118,7 +118,7 @@
                             android:drawableLeft="@drawable/ic_barcode_scanner_fill0_wght400_grad0_opsz48"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text=" Order ID"
+                            android:text="@string/order_id"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -150,7 +150,7 @@
                             android:drawableLeft="@drawable/ic_local_shipping_fill0_wght100_grad_25_opsz24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text=" Delivery Method"
+                            android:text="@string/delivery_method"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -166,6 +166,7 @@
                             android:textSize="12dp"
                             android:textStyle="bold" />
                     </LinearLayout>
+
                     <LinearLayout
                         android:id="@+id/llStoreOD"
                         android:layout_width="match_parent"
@@ -180,7 +181,7 @@
                             android:drawableLeft="@drawable/ic_pin_drop_fill0_wght100_grad_25_opsz24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text="Received at"
+                            android:text="@string/received_at"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -211,7 +212,7 @@
                             android:drawableLeft="@drawable/ic_near_me_fill0_wght100_grad_25_opsz24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text="Delivery to"
+                            android:text="@string/delivery_to"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -244,7 +245,7 @@
                             android:drawableLeft="@drawable/ic_credit_card_fill0_wght100_grad_25_opsz24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text="Payment Method"
+                            android:text="@string/payment_method"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -278,7 +279,7 @@
                             android:drawableLeft="@drawable/ic_edit_note_fill0_wght100_grad_25_opsz24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text="Note"
+                            android:text="@string/note"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -314,7 +315,7 @@
                         android:background="@drawable/custom_button_oval"
                         android:gravity="center"
                         android:lineHeight="20dp"
-                        android:text="Your Item(s)"
+                        android:text="@string/your_item_s"
                         android:textColor="@color/white"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -350,7 +351,7 @@
                         android:background="@drawable/custom_button_oval"
                         android:gravity="center"
                         android:lineHeight="20dp"
-                        android:text="Total Price"
+                        android:text="@string/total_price"
                         android:textColor="@color/white"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -360,7 +361,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingStart="4dp"
-                        android:text="* Prices includes 8% VAT, applicable from 01/02/2022 to 31/12/2022"
+                        android:text="@string/prices_includes_8_vat_applicable_from_01_02_2022_to_31_12_2022"
                         android:textColor="@color/red"
                         android:textSize="12dp"
                         android:textStyle="italic" />
@@ -402,7 +403,7 @@
                     android:id="@+id/btnCancelOrder"
                     android:layout_margin="20dp"
                     android:background="@drawable/custom_button_oval"
-                    android:text="Cancel :("
+                    android:text="@string/cancel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
