--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -64,7 +64,7 @@
                     android:background="@drawable/custom_button_oval"
                     android:gravity="center"
                     android:lineHeight="20dp"
-                    android:text="Payment Info"
+                    android:text="@string/payment_info"
                     android:textColor="@color/white"
                     android:textSize="14dp"
                     android:textStyle="bold" />
@@ -91,7 +91,7 @@
                             android:drawableLeft="@drawable/ic_call_fill0_wght400_grad0_opsz48"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text=" Phone Number"
+                            android:text="@string/Phone_number"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -122,7 +122,7 @@
                             android:drawableLeft="@drawable/ic_local_shipping_fill0_wght100_grad_25_opsz24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text=" Delivery Method"
+                            android:text="@string/delivery_method"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -153,7 +153,7 @@
                             android:drawableLeft="@drawable/ic_pin_drop_fill0_wght100_grad_25_opsz24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text="Received at"
+                            android:text="@string/received_at"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -185,7 +185,7 @@
                             android:drawableLeft="@drawable/ic_near_me_fill0_wght100_grad_25_opsz24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text="Delivery to"
+                            android:text="@string/delivery_to"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -218,7 +218,7 @@
                             android:drawableLeft="@drawable/ic_credit_card_fill0_wght100_grad_25_opsz24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text="Payment Method"
+                            android:text="@string/payment_method"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -252,7 +252,7 @@
                             android:drawableLeft="@drawable/ic_edit_note_fill0_wght100_grad_25_opsz24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text="Note"
+                            android:text="@string/note"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -288,7 +288,7 @@
                         android:background="@drawable/custom_button_oval"
                         android:gravity="center"
                         android:lineHeight="20dp"
-                        android:text="Your Item(s)"
+                        android:text="@string/your_item_s"
                         android:textColor="@color/white"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -324,7 +324,7 @@
                         android:background="@drawable/custom_button_oval"
                         android:gravity="center"
                         android:lineHeight="20dp"
-                        android:text="Total Price"
+                        android:text="@string/total_price"
                         android:textColor="@color/white"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -334,7 +334,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingStart="4dp"
-                        android:text="* Prices includes 8% VAT, applicable from 01/02/2022 to 31/12/2022"
+                        android:text="@string/prices_includes_8_vat_applicable_from_01_02_2022_to_31_12_2022"
                         android:textColor="@color/red"
                         android:textSize="12dp"
                         android:textStyle="italic" />
@@ -351,7 +351,7 @@
                             android:drawableLeft="@drawable/ic_baseline_money_24"
                             android:gravity="center"
                             android:paddingStart="4dp"
-                            android:text=" Total (1 item(s))"
+                            android:text="@string/total"
                             android:drawableTint="@color/colorPrimary"
                             android:textColor="@color/colorPrimary"
                             android:textSize="13dp"
@@ -381,6 +381,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@drawable/custom_button_oval"
-            android:text="Pay : 23.000.000 VND" />
+            android:text="@string/pay_23_000_000_vnd" />
     </RelativeLayout>
 </LinearLayout>
