--- a/app/src/main/res/layout/activity_choose_address.xml
+++ b/app/src/main/res/layout/activity_choose_address.xml
@@ -58,9 +58,10 @@
         android:drawableStart="@drawable/ic_baseline_my_location_24"
         android:drawableEnd="@drawable/img_21"
         android:drawableTint="@color/colorPrimary"
+        android:drawablePadding="10dp"
         android:gravity="left|center"
         android:padding="10dp"
-        android:text="    Sử dụng vị trí hiện tại của tôi"
+        android:text="@string/use_my_current_location"
         android:textColor="@color/black"
         android:textSize="15dp"
         android:textStyle="bold" />
@@ -72,12 +73,13 @@
         android:layout_height="?actionBarSize"
         android:layout_marginVertical="10dp"
         android:background="@color/white"
+        android:drawablePadding="10dp"
         android:drawableStart="@drawable/ic_baseline_location_on_24"
         android:drawableEnd="@drawable/img_21"
         android:drawableTint="@color/red"
         android:gravity="left|center"
         android:padding="10dp"
-        android:text="    Chọn từ bản đồ"
+        android:text="@string/choose_from_maps"
         android:textColor="@color/black"
         android:textSize="15dp"
         android:textStyle="bold" />
@@ -93,7 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
-            android:text="Vị trí đã lưu"
+            android:text="@string/saved_address"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:textStyle="bold" />
