--- a/app/src/main/res/layout/activity_choose_from_map.xml
+++ b/app/src/main/res/layout/activity_choose_from_map.xml
@@ -69,5 +69,5 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
-        android:text="Confirm" />
+        android:text="@string/confirm" />
 </RelativeLayout>
