--- a/app/src/main/res/layout/activity_otp_verify.xml
+++ b/app/src/main/res/layout/activity_otp_verify.xml
@@ -41,7 +41,7 @@
         android:textAlignment="center"
         android:layout_width="289dp"
         android:layout_height="20dp"
-        android:text="We've sent a OTP to : "
+        android:text="@string/we_ve_sent_a_otp_to"
         />
     <TextView
         android:id="@+id/tvPhoneNumberSendOtp"
@@ -165,7 +165,7 @@
             android:layout_width="111dp"
             android:layout_height="23dp"
             android:lineHeight="22.5dp"
-            android:text="Didn't Receive ?"
+            android:text="@string/didn_t_receive"
             android:textAlignment="center"
             android:textSize="15dp" />
 
@@ -176,7 +176,7 @@
             android:layout_height="23dp"
             android:layout_toRightOf="@id/tvDR"
             android:lineHeight="22.5dp"
-            android:text="Resend"
+            android:text="@string/resend"
             android:textAlignment="center"
             android:textColor="@color/colorPrimary"
             android:textSize="15dp"
@@ -187,7 +187,7 @@
         android:lineHeight="20dp"
         android:textSize="18dp"
         android:textAllCaps="false"
-        android:text="Confirm"
+        android:text="@string/confirm"
         android:textStyle="bold"
         android:layout_marginTop="30dp"
         android:layout_width="295dp"
@@ -201,7 +201,7 @@
         android:lineHeight="22.5dp"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:text="Contact us"
+        android:text="@string/contact_us"
         android:textSize="15dp"
         android:textAlignment="center"
         />
