--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -33,6 +33,7 @@
         android:weightSum="2">
 
         <TextView
+            android:textAllCaps="true"
             android:id="@+id/tvDelivery"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -40,19 +41,20 @@
             android:background="@color/cartTabColor"
             android:gravity="center"
             android:lineHeight="20dp"
-            android:text="DELIVERY"
+            android:text="@string/delivery"
             android:textColor="@color/white"
             android:textSize="19dp"
             android:textStyle="bold" />
 
         <TextView
+            android:textAllCaps="true"
             android:id="@+id/tvGoToStore"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:lineHeight="20dp"
-            android:text="GO TO STORE"
+            android:text="@string/go_to_store"
             android:textColor="@color/white"
             android:textSize="19dp"
             android:textStyle="bold" />
@@ -79,17 +81,17 @@
 
 
                 <LinearLayout
-                    android:padding="5dp"
-                    android:background="@drawable/inner_shadow"
                     android:layout_width="367dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:background="@drawable/inner_shadow"
+                    android:orientation="vertical"
+                    android:padding="5dp">
 
                     <RelativeLayout
-                        android:gravity="center_vertical"
                         android:id="@+id/rltStore"
                         android:layout_width="match_parent"
                         android:layout_height="70dp"
+                        android:gravity="center_vertical"
                         android:paddingStart="20dp">
 
                         <ImageView
@@ -119,10 +121,10 @@
 
                             <TextView
                                 android:id="@+id/tvStoreAddressCart"
-                                android:maxLines="2"
                                 android:layout_width="200dp"
                                 android:layout_height="wrap_content"
                                 android:lineHeight="20dp"
+                                android:maxLines="2"
                                 android:textColor="@color/textColor"
                                 android:textSize="12dp" />
                         </LinearLayout>
@@ -138,18 +140,20 @@
                             android:src="@drawable/ic_edit_location"
                             android:visibility="gone" />
                     </RelativeLayout>
+
                     <RelativeLayout
-                        android:gravity="center_vertical"
                         android:id="@+id/rlCustomer"
                         android:layout_width="match_parent"
                         android:layout_height="70dp"
+                        android:gravity="center_vertical"
                         android:paddingStart="20dp">
+
                         <View
-                            android:layout_centerHorizontal="true"
                             android:layout_width="200dp"
-                            android:background="#4D000000"
                             android:layout_height="1dp"
-                            />
+                            android:layout_centerHorizontal="true"
+                            android:background="#4D000000" />
+
                         <ImageView
                             android:id="@+id/imgTo"
                             android:layout_width="24dp"
@@ -174,12 +178,13 @@
                                 android:textColor="@color/colorPrimary"
                                 android:textSize="16dp"
                                 android:textStyle="bold" />
+
                             <TextView
-                                android:maxLines="2"
                                 android:id="@+id/tvAddressCustomer"
                                 android:layout_width="200dp"
                                 android:layout_height="wrap_content"
                                 android:lineHeight="20dp"
+                                android:maxLines="2"
                                 android:text="241 Xuan Thuy, Dich Vong Hau, Cau Giay, Hanoi"
                                 android:textColor="@color/textColor"
                                 android:textSize="12dp" />
@@ -196,7 +201,6 @@
                             android:src="@drawable/ic_edit_location"
                             android:visibility="visible" />
                     </RelativeLayout>
-
 
 
                 </LinearLayout>
@@ -216,7 +220,7 @@
                     android:background="@drawable/custom_button_oval"
                     android:gravity="center"
                     android:lineHeight="20dp"
-                    android:text="Your order"
+                    android:text="@string/your_order"
                     android:textColor="@color/white"
                     android:textSize="14dp"
                     android:textStyle="bold" />
@@ -241,6 +245,7 @@
                 android:background="@drawable/custom_rcv_border"
                 android:paddingHorizontal="5dp"
                 android:paddingVertical="10dp" />
+
             <TextView
                 android:layout_width="137dp"
                 android:layout_height="23dp"
@@ -251,26 +256,27 @@
                 android:background="@drawable/custom_button_oval"
                 android:gravity="center"
                 android:lineHeight="20dp"
-                android:text="Note"
+                android:text="@string/note"
                 android:textColor="@color/white"
                 android:textSize="14dp"
                 android:textStyle="bold" />
+
             <EditText
                 android:id="@+id/edtNoteOrder"
-                android:layout_marginHorizontal="20dp"
-                android:maxHeight="150dp"
-                android:textSize="15dp"
-                android:padding="10dp"
-                android:hint="Write your note for Us"
-                android:maxLength="254"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
-                android:textCursorDrawable="@color/colorPrimary"
-                android:textColor="@color/black"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/custom_rcv_border"
+                android:hint="Write your note for Us"
+                android:maxHeight="150dp"
+                android:maxLength="254"
                 android:minHeight="50dp"
-                />
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:textCursorDrawable="@color/colorPrimary"
+                android:textSize="15dp" />
+
             <TextView
                 android:layout_width="137dp"
                 android:layout_height="23dp"
@@ -281,7 +287,7 @@
                 android:background="@drawable/custom_button_oval"
                 android:gravity="center"
                 android:lineHeight="20dp"
-                android:text="Payment Method"
+                android:text="@string/payment_method"
                 android:textColor="@color/white"
                 android:textSize="14dp"
                 android:textStyle="bold" />
@@ -358,12 +364,11 @@
             </RelativeLayout>
 
 
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
                 android:layout_height="25dp"
-                android:layout_marginHorizontal="30dp">
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -378,6 +383,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tvShippingTime"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@id/cvCardPayment"
@@ -398,7 +404,7 @@
                 android:background="@drawable/custom_button_oval"
                 android:gravity="center"
                 android:lineHeight="20dp"
-                android:text="Amount Detail"
+                android:text="@string/amount_detail"
                 android:textColor="@color/white"
                 android:textSize="14dp"
                 android:textStyle="bold" />
@@ -413,7 +419,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/cvCardPayment"
                     android:gravity="center"
-                    android:text="Price"
+                    android:text="@string/price"
                     android:textColor="@color/textColor"
                     android:textSize="12dp" />
 
@@ -439,7 +445,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/cvCardPayment"
                     android:gravity="center"
-                    android:text="Shipping Charges"
+                    android:text="@string/shipping_charges"
                     android:textColor="@color/textColor"
                     android:textSize="12dp" />
 
@@ -465,7 +471,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/cvCardPayment"
                     android:gravity="center"
-                    android:text="Total"
+                    android:text="@string/total"
                     android:textColor="@color/colorPrimary"
                     android:textSize="12dp"
                     android:textStyle="bold" />
@@ -491,7 +497,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="30dp"
                 android:background="@drawable/custom_button_oval"
-                android:text="Pay now"
+                android:text="@string/pay_now"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="12dp" />
